syntax = "proto3";

package campaign.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/duality-engine/api/gen/go/campaign/v1;campaignv1";

message Campaign {
  string id = 1;
  string name = 2;
  GmMode gm_mode = 3;
  // Number of all participants (GM + PLAYER + future roles) for this campaign.
  int32 participant_count = 4;
  // Number of all characters (PC + NPC + future kinds) for this campaign.
  int32 character_count = 5;
  string theme_prompt = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

enum GmMode {
  GM_MODE_UNSPECIFIED = 0;
  HUMAN = 1;
  AI = 2;
  HYBRID = 3;
}
